--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     />
     <meta
       property="og:image"
-      content="https://mycomputerproject.vercel.app/image/ITC.png"
+      content="https://mycomputerproject.vercel.app/img/ITC.png"
     />
     <meta property="og:url" content="https://mycomputerproject.vercel.app/" />
     <meta property="og:type" content="website" />
