--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Computer Shop | High Performance Laptops</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/ITC.png" type="image/x-icon" />
+    <link rel="icon" href="image/ITC.png" type="image/x-icon" />
 
     <!-- SEO Meta Tags -->
     <meta
@@ -30,7 +30,7 @@
     />
     <meta
       property="og:image"
-      content="https://mycomputerproject.vercel.app/img/ITC.png"
+      content="https://mycomputerproject.vercel.app/image/ITC.png"
     />
     <meta property="og:url" content="https://mycomputerproject.vercel.app/" />
     <meta property="og:type" content="website" />
@@ -131,11 +131,11 @@
       </p>
 
       <div class="image-gallery">
-        <img src="img/download (1).jpg" alt="Laptop 1" />
-        <img src="img/download (2).jpg" alt="Laptop 2" />
-        <img src="img/download.jpg" alt="Laptop 3" />
-        <img src="img/images (1).jpg" alt="Laptop 4" />
-        <img src="img/images (2).jpg" alt="Laptop 5" />
+        <img src="image/download (1).jpg" alt="Laptop 1" />
+        <img src="image/download (2).jpg" alt="Laptop 2" />
+        <img src="image/download.jpg" alt="Laptop 3" />
+        <img src="image/images (1).jpg" alt="Laptop 4" />
+        <img src="image/images (2).jpg" alt="Laptop 5" />
       </div>
 
       <p>
@@ -160,7 +160,7 @@
         <li>Modern, sleek design to fit any space</li>
       </ul>
 
-      <img src="img/images.jpg" alt="Laptop 6" />
+      <img src="image/images.jpg" alt="Laptop 6" />
     </main>
 
     <footer>
